--- a/opdracht Dashboard 07012021/index.html
+++ b/opdracht Dashboard 07012021/index.html
@@ -22,8 +22,7 @@
                   <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
               <div class="navbarlinks">
-                  <a class="active_link" href="#">Dashboard Sam</a>
-                  <a href="#">Dashboard Ruben</a>
+                  <a class="active_link" href="#">Dashboard CV</a>
               </div>
           </nav>
           <main>
@@ -37,7 +36,7 @@
                       <div class="tabel">                         
                           <div class="tabel_content">
                               <p class="text-primary-p">Opleidingen</p>                              
-                              <p class="font-bold text-title">Studio Assistant, Recording,Mixing engineer <br /> Graduaat Grafische Vormgeving 1ste jaar </p>
+                              <p class="font-bold text-title">Studio Assistant <br />, Recording,Mixing engineer <br /> Graduaat Grafische Vormgeving 1ste jaar </p>
                           </div>
                       </div>
                       <div class="tabel">                          
